doctorapp/force-app/main/default/objects/Audit_Log__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>e.g. LOGIN, SALE_CREATED, PRODUCT_UPDATED.</description>
    <label>Action</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>