doctorapp/force-app/main/default/objects/Audit_Log__c/fields/Changes__c.field-meta.xml
<CustomField>
    <fullName>Changes__c</fullName>
    <description>JSON representation of old/new values.</description>
    <label>Changes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>