doctorapp/force-app/main/default/objects/Audit_Log__c/fields/Entity_Id__c.field-meta.xml
<CustomField>
    <fullName>Entity_Id__c</fullName>
    <description>Id of the affected record.</description>
    <label>Entity Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>