doctorapp/force-app/main/default/objects/Audit_Log__c/fields/Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Entity_Type__c</fullName>
    <description>e.g. Sale__c, Product__c.</description>
    <label>Entity Type</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>