doctorapp/force-app/main/default/objects/Audit_Log__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <description>User who performed the action.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>POS Audit Logs</relationshipLabel>
    <relationshipName>POS_Audit_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>